gdk-includes/include/gdk/gdk.h

/** A server session */
struct GA_session;
/** A Parsed JSON object */
typedef struct GA_json GA_json;
/** An api method call that potentially requires two factor authentication to complete */
struct GA_auth_handler;
/**
 * Construct a transaction.
 *
 * :param session: The session to use.
 * :param transaction_details: The :ref:`create-tx-details` for constructing.
 * :param call: Destination for the resulting GA_auth_handler to complete the action.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``transaction_details`` will be emptied when the call completes.
 */
GDK_API int GA_create_transaction(
    struct GA_session* session, GA_json* transaction_details, struct GA_auth_handler** call);
/**
 * Sign the user's inputs to a transaction.
 *
 * :param session: The session to use.
 * :param transaction_details: The :ref:`sign-tx-details` for signing, as previously
 *|     returned from `GA_create_transaction` or (for Liquid) `GA_blind_transaction`.
 * :param call: Destination for the resulting GA_auth_handler to perform the signing.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``transaction_details`` will be emptied when the call completes.
 */
GDK_API int GA_sign_transaction(
    struct GA_session* session, GA_json* transaction_details, struct GA_auth_handler** call);
/**
 * Get wallet details of a PSBT or PSET.
 *
 * :param session: The session to use.
 * :param details: The :ref:`psbt-wallet-details` for getting the wallet details.
 * :param call: Destination for the resulting GA_auth_handler to get the wallet details.
 *|     The call handlers result is :ref:`psbt-get-details-result`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 *
 * .. note:: EXPERIMENTAL warning: this call may be changed in future releases.
 */
GDK_API int GA_psbt_get_details(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Broadcast a fully signed transaction to the P2P network.
 *
 * :param session: The session to use.
 * :param transaction_hex: The signed transaction in hex to broadcast.
 * :param tx_hash: Destination for the resulting transactions hash.
 *|     Returned string should be freed using `GA_destroy_string`.
 */
GDK_API int GA_broadcast_transaction(struct GA_session* session, const char* transaction_hex, char** tx_hash);
/**
 * Send a transaction created by GA_create_transaction and signed by GA_sign_transaction.
 *
 * :param session: The session to use.
 * :param transaction_details: The :ref:`send-tx-details` for sending.
 * :param call: Destination for the resulting GA_auth_handler to perform the send.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``transaction_details`` will be emptied when the call completes.
 */
GDK_API int GA_send_transaction(
    struct GA_session* session, GA_json* transaction_details, struct GA_auth_handler** call);
/**
 * Request an email containing the user's nLockTime transactions.
 *
 * :param session: The session to use.
 */
GDK_API int GA_send_nlocktimes(struct GA_session* session);
/**
 * Set the number of blocks after which CSV transactions become spendable without two factor authentication.
 *
 * :param session: The session to use.
 * :param locktime_details: The :ref:`set-locktime-details` for setting the block value.
 * :param call: Destination for the resulting GA_auth_handler to change the locktime.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``locktime_details`` will be emptied when the call completes.
 */
GDK_API int GA_set_csvtime(struct GA_session* session, GA_json* locktime_details, struct GA_auth_handler** call);
/**
 * Set the number of blocks after which nLockTime transactions become
 *|    spendable without two factor authentication. When this call
 *|    succeeds, if the user has an email address associated with the
 *|    wallet, an updated nlocktimes.zip file will be sent via email.
 *
 * :param session: The session to use.
 * :param locktime_details: The :ref:`set-locktime-details` for setting the block value.
 * :param call: Destination for the resulting GA_auth_handler to change the locktime.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 */
GDK_API int GA_set_nlocktime(
    struct GA_session* session, const GA_json* locktime_details, struct GA_auth_handler** call);
/**
 * Add a transaction memo to a user's GreenAddress transaction.
 *
 * :param session: The session to use.
 * :param txhash_hex: The transaction hash to associate the memo with.
 * :param memo: The memo to set.
 * :param memo_type: Unused, pass 0.
 */
GDK_API int GA_set_transaction_memo(
    struct GA_session* session, const char* txhash_hex, const char* memo, uint32_t memo_type);
/**
 * Get the current network's fee estimates.
 *
 * :param session: The session to use.
 * :param estimates: Destination for the returned :ref:`estimates`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 *
 * The estimates are returned as an array of 25 elements. Each element is
 * an integer representing the fee estimate expressed as satoshi per 1000
 * bytes. The first element is the minimum relay fee as returned by the
 * network, while the remaining elements are the current estimates to use
 * for a transaction to confirm from 1 to 24 blocks.
 *
 */
GDK_API int GA_get_fee_estimates(struct GA_session* session, GA_json** estimates);
/**
 * Get the user's credentials.
 *
 * :param session: The session to use.
 * :param details: The :ref:`get-credentials-details` to get the credentials.
 * :param call: Destination for the resulting GA_auth_handler to get the user's credentials.
 *|     The call handlers result is :ref:`login-credentials`.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 *
 * .. note:: When calling from C/C++, the parameter ``details`` will be emptied when the call completes.
 */
GDK_API int GA_get_credentials(struct GA_session* session, GA_json* details, struct GA_auth_handler** call);
/**
 * Get the latest un-acknowledged system message.
 *
 * :param session: The session to use.
 * :param message_text: The returned UTF-8 encoded message text.
 *|     Returned string should be freed using `GA_destroy_string`.
 *
 * .. note:: If all current messages are acknowledged, an empty string is returned.
 */
GDK_API int GA_get_system_message(struct GA_session* session, char** message_text);
/**
 * Sign and acknowledge a system message.
 *
 * The message text will be signed with a key derived from the wallet master key and the signature
 * sent to the server.
 *
 * :param session: The session to use.
 * :param message_text: UTF-8 encoded message text being acknowledged.
 * :param call: Destination for the resulting GA_auth_handler to acknowledge the message.
 *|     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
 */
GDK_API int GA_ack_system_message(struct GA_session* session, const char* message_text, struct GA_auth_handler** call);
/**
 * Get the two factor configuration for the current user.
 *
 * :param session: The session to use.
 * :param config: Destination for the returned :ref:`twofactor_configuration`.
 *|     Returned GA_json should be freed using `GA_destroy_json`.
 */
GDK_API int GA_get_twofactor_config(struct GA_session* session, GA_json** config);
/**
 * Free a GA_json object.
 *
 * :param json: GA_json object to free.
 */
GDK_API int GA_destroy_json(GA_json* json);
/**
 * Free an auth_handler after use.
 *
 * :param call: The auth_handler to free.
 */
GDK_API int GA_destroy_auth_handler(struct GA_auth_handler* call);
/**
 * Free a string returned by the api.
 *
 * :param str: The string to free.
 */
GDK_API void GA_destroy_string(char* str);