lib/ffi/generated_bindings.dart


  /// Get wallet details of a PSBT or PSET.
  ///
  /// :param session: The session to use.
  /// :param details: The :ref:`psbt-wallet-details` for getting the wallet details.
  /// :param call: Destination for the resulting GA_auth_handler to get the wallet details.
  /// |     The call handlers result is :ref:`psbt-get-details-result`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  ///
  /// .. note:: EXPERIMENTAL warning: this call may be changed in future releases.
  int GA_psbt_get_details(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_psbt_get_details(
      session,
      details,
      call,
    );
  }

  late final _GA_psbt_get_detailsPtr =
      _lookup<ffi.NativeFunction<NativeGA_psbt_get_details>>(
          'GA_psbt_get_details');
  late final _GA_psbt_get_details =
      _GA_psbt_get_detailsPtr.asFunction<DartGA_psbt_get_details>();

  /// Broadcast a fully signed transaction to the P2P network.
  ///
  /// :param session: The session to use.
  /// :param transaction_hex: The signed transaction in hex to broadcast.
  /// :param tx_hash: Destination for the resulting transactions hash.
  /// |     Returned string should be freed using `GA_destroy_string`.
  int GA_broadcast_transaction(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> transaction_hex,
    ffi.Pointer<ffi.Pointer<ffi.Char>> tx_hash,
  ) {
    return _GA_broadcast_transaction(
      session,
      transaction_hex,
      tx_hash,
    );
  }

  late final _GA_broadcast_transactionPtr =
      _lookup<ffi.NativeFunction<NativeGA_broadcast_transaction>>(
          'GA_broadcast_transaction');
  late final _GA_broadcast_transaction =
      _GA_broadcast_transactionPtr.asFunction<DartGA_broadcast_transaction>();

  /// Send a transaction created by GA_create_transaction and signed by GA_sign_transaction.
  ///
  /// :param session: The session to use.
  /// :param transaction_details: The :ref:`send-tx-details` for sending.
  /// :param call: Destination for the resulting GA_auth_handler to perform the send.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_send_transaction(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> transaction_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_send_transaction(
      session,
      transaction_details,
      call,
    );
  }

  late final _GA_send_transactionPtr =
      _lookup<ffi.NativeFunction<NativeGA_send_transaction>>(
          'GA_send_transaction');
  late final _GA_send_transaction =
      _GA_send_transactionPtr.asFunction<DartGA_send_transaction>();

  /// Create a PSETv2 filling UTXO details and receive/change outputs.
  ///
  /// :param session: The session to use.
  /// :param pset_details: PSET :ref:`create-pset-details` for constructing.
  /// :param call: Destination for the resulting GA_auth_handler to complete the action.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_create_pset(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> pset_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_create_pset(
      session,
      pset_details,
      call,
    );
  }

  late final _GA_create_psetPtr =
      _lookup<ffi.NativeFunction<NativeGA_create_pset>>('GA_create_pset');
  late final _GA_create_pset =
      _GA_create_psetPtr.asFunction<DartGA_create_pset>();

  /// Blind PSETv2 outputs and sign the user's inputs.
  ///
  /// :param session: The session to use.
  /// :param pset_details: PSET PSET :ref:`sign-pset-details` used for constructing.
  /// :param call: Destination for the resulting GA_auth_handler to perform the blinding and signing.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_sign_pset(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> pset_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_sign_pset(
      session,
      pset_details,
      call,
    );
  }

  late final _GA_sign_psetPtr =
      _lookup<ffi.NativeFunction<NativeGA_sign_pset>>('GA_sign_pset');
  late final _GA_sign_pset = _GA_sign_psetPtr.asFunction<DartGA_sign_pset>();

  /// Request an email containing the user's nLockTime transactions.
  ///
  /// :param session: The session to use.
  int GA_send_nlocktimes(
    ffi.Pointer<GA_session> session,
  ) {
    return _GA_send_nlocktimes(
      session,
    );
  }

  late final _GA_send_nlocktimesPtr =
      _lookup<ffi.NativeFunction<NativeGA_send_nlocktimes>>(
          'GA_send_nlocktimes');
  late final _GA_send_nlocktimes =
      _GA_send_nlocktimesPtr.asFunction<DartGA_send_nlocktimes>();

  /// Set the number of blocks after which CSV transactions become spendable without two factor authentication.
  ///
  /// :param session: The session to use.
  /// :param locktime_details: The :ref:`set-locktime-details` for setting the block value.
  /// :param call: Destination for the resulting GA_auth_handler to change the locktime.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_set_csvtime(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> locktime_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_set_csvtime(
      session,
      locktime_details,
      call,
    );
  }

  late final _GA_set_csvtimePtr =
      _lookup<ffi.NativeFunction<NativeGA_set_csvtime>>('GA_set_csvtime');
  late final _GA_set_csvtime =
      _GA_set_csvtimePtr.asFunction<DartGA_set_csvtime>();

  /// Set the number of blocks after which nLockTime transactions become
  /// |    spendable without two factor authentication. When this call
  /// |    succeeds, if the user has an email address associated with the
  /// |    wallet, an updated nlocktimes.zip file will be sent via email.
  ///
  /// :param session: The session to use.
  /// :param locktime_details: The :ref:`set-locktime-details` for setting the block value.
  /// :param call: Destination for the resulting GA_auth_handler to change the locktime.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_set_nlocktime(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> locktime_details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_set_nlocktime(
      session,
      locktime_details,
      call,
    );
  }

  late final _GA_set_nlocktimePtr =
      _lookup<ffi.NativeFunction<NativeGA_set_nlocktime>>('GA_set_nlocktime');
  late final _GA_set_nlocktime =
      _GA_set_nlocktimePtr.asFunction<DartGA_set_nlocktime>();

  /// Add a transaction memo to a user's GreenAddress transaction.
  ///
  /// :param session: The session to use.
  /// :param txhash_hex: The transaction hash to associate the memo with.
  /// :param memo: The memo to set.
  /// :param memo_type: Unused, pass 0.
  int GA_set_transaction_memo(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> txhash_hex,
    ffi.Pointer<ffi.Char> memo,
    int memo_type,
  ) {
    return _GA_set_transaction_memo(
      session,
      txhash_hex,
      memo,
      memo_type,
    );
  }

  late final _GA_set_transaction_memoPtr =
      _lookup<ffi.NativeFunction<NativeGA_set_transaction_memo>>(
          'GA_set_transaction_memo');
  late final _GA_set_transaction_memo =
      _GA_set_transaction_memoPtr.asFunction<DartGA_set_transaction_memo>();

  /// Get the current network's fee estimates.
  ///
  /// :param session: The session to use.
  /// :param estimates: Destination for the returned :ref:`estimates`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  ///
  /// The estimates are returned as an array of 25 elements. Each element is
  /// an integer representing the fee estimate expressed as satoshi per 1000
  /// bytes. The first element is the minimum relay fee as returned by the
  /// network, while the remaining elements are the current estimates to use
  /// for a transaction to confirm from 1 to 24 blocks.
  int GA_get_fee_estimates(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_json>> estimates,
  ) {
    return _GA_get_fee_estimates(
      session,
      estimates,
    );
  }

  late final _GA_get_fee_estimatesPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_fee_estimates>>(
          'GA_get_fee_estimates');
  late final _GA_get_fee_estimates =
      _GA_get_fee_estimatesPtr.asFunction<DartGA_get_fee_estimates>();

  /// Get the user's credentials.
  ///
  /// :param session: The session to use.
  /// :param details: The :ref:`get-credentials-details` to get the credentials.
  /// :param call: Destination for the resulting GA_auth_handler to get the user's credentials.
  /// |     The call handlers result is :ref:`login-credentials`.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_get_credentials(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<GA_json> details,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_get_credentials(
      session,
      details,
      call,
    );
  }

  late final _GA_get_credentialsPtr =
      _lookup<ffi.NativeFunction<NativeGA_get_credentials>>(
          'GA_get_credentials');
  late final _GA_get_credentials =
      _GA_get_credentialsPtr.asFunction<DartGA_get_credentials>();

  /// Get the latest un-acknowledged system message.
  ///
  /// :param session: The session to use.
  /// :param message_text: The returned UTF-8 encoded message text.
  /// |     Returned string should be freed using `GA_destroy_string`.
  ///
  /// .. note:: If all current messages are acknowledged, an empty string is returned.
  int GA_get_system_message(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<ffi.Char>> message_text,
  ) {
    return _GA_get_system_message(
      session,
      message_text,
    );
  }

  late final _GA_get_system_messagePtr =
      _lookup<ffi.NativeFunction<NativeGA_get_system_message>>(
          'GA_get_system_message');
  late final _GA_get_system_message =
      _GA_get_system_messagePtr.asFunction<DartGA_get_system_message>();

  /// Sign and acknowledge a system message.
  ///
  /// The message text will be signed with a key derived from the wallet master key and the signature
  /// sent to the server.
  ///
  /// :param session: The session to use.
  /// :param message_text: UTF-8 encoded message text being acknowledged.
  /// :param call: Destination for the resulting GA_auth_handler to acknowledge the message.
  /// |     Returned GA_auth_handler should be freed using `GA_destroy_auth_handler`.
  int GA_ack_system_message(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Char> message_text,
    ffi.Pointer<ffi.Pointer<GA_auth_handler>> call,
  ) {
    return _GA_ack_system_message(
      session,
      message_text,
      call,
    );
  }

  late final _GA_ack_system_messagePtr =
      _lookup<ffi.NativeFunction<NativeGA_ack_system_message>>(
          'GA_ack_system_message');
  late final _GA_ack_system_message =
      _GA_ack_system_messagePtr.asFunction<DartGA_ack_system_message>();

  /// Get the two factor configuration for the current user.
  ///
  /// :param session: The session to use.
  /// :param config: Destination for the returned :ref:`twofactor_configuration`.
  /// |     Returned GA_json should be freed using `GA_destroy_json`.
  int GA_get_twofactor_config(
    ffi.Pointer<GA_session> session,
    ffi.Pointer<ffi.Pointer<GA_json>> config,
  ) {
    return _GA_get_twofactor_config(
      session,
      config,
    );
  }
